--- a/_config.yml
+++ b/_config.yml
@@ -12,9 +12,9 @@ description: > # this means to ignore newlines until "baseurl:"
 
 # Author details for the jekyll-seo-tag gem
 author:
-  name: Your Name
-  email: your-email@domain.com
-  twitter: # twitter username without the @ symbol
+  name: Hanjoong Cho
+  email: hanjoongcho@gmail.com
+  #twitter: # twitter username without the @ symbol
 
 # Social details for the jekyll-seo-tag gem
 social:
