--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,12 @@
 locale: "en-US"
-title: hanjoong's github blog # Title of your site
+title: hanjoong's blog # Title of your site
 url: "https://hanjoongcho.github.io" # the base hostname & protocol for your site
 baseurl: "" # the subpath of your site, e.g. /blog/
 google_analytics_key: ""
 
 # Default description in social shares for the jekyll-seo-tag gem
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  awesome application factory
 
 # Author details for the jekyll-seo-tag gem
 author:
